--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,12 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,700');
 
 html, body {
-    height: 95%;
+    height: 100%;
     width: 100%;
     font-family: 'Poppins', sans-serif;
     color: #222;
+    line-height: 1.0;
+    margin: 0 auto;
 }
 .navbar{
     padding: .8rem;
@@ -36,8 +38,8 @@ html, body {
     width:150px;
 }
 .carousel-inner img{
-    width: 70%;
-    height: 20%;
+    width: 100%;
+    height: 100%;
     padding-top: 0%;
     margin-top: 0%;
 }
@@ -287,7 +289,7 @@ samp {
     display: none;
 }
 .footer {
-    text-align: justify;
+    text-align: center;
     font-weight: 400;
     line-height: 1.4;
     font-size: 1.0rem;
@@ -295,6 +297,7 @@ samp {
     background-color: none;
     color: #3c3b37;/*3c3b37*/
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    width: 100%;
 }
 ul{
     list-style-type: none;
