--- a/css/main.css
+++ b/css/main.css
@@ -241,6 +241,10 @@ h6.signature{
     text-align: center;
     font-size: 18px;
 }
+h6.blog{
+    text-align: center;
+    font-size: 18px;
+}
 mark{
     background: yellow;
 }
@@ -257,6 +261,20 @@ p {
     font-weight: 400;
 }
 p.blocktext{
+    margin-left: auto;
+    margin-right: auto;
+    text-align: justify;
+    max-width: 40em;
+    min-width: auto;
+    font-size: 18px;
+}
+ol{
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    border-style: hidden;
+    font-size: 13px;
+    font-weight: 400;
+}
+ol.blocktext{
     margin-left: auto;
     margin-right: auto;
     text-align: justify;
