--- a/css/main.css
+++ b/css/main.css
@@ -267,6 +267,7 @@ p.blocktext{
     max-width: 40em;
     min-width: auto;
     font-size: 18px;
+    word-wrap: break-word;
 }
 ol{
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -315,21 +316,30 @@ samp {
     display: none;
 }
 .footer {
-    text-align: center;
-    font-weight: 400;
-    line-height: 1.4;
-    font-size: 1.0rem;
-    padding: .8rem;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    max-width: none;
+    text-align: left;
+    font-weight: 180;
+    line-height: 1.0;
+    font-size: small;
+    padding: .3rem;
     background-color: none;
     color: #3c3b37;/*3c3b37*/
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     width: 100%;
 }
 ul{
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 40px;
     list-style-type: none;
     margin: 0;
-    padding: .8rem;
-    display: block;
+    padding: 0;
     list-style-type: none;
 }
 img {
