--- a/css/main.css
+++ b/css/main.css
@@ -37,6 +37,15 @@ html, body {
     display:block;
     width:150px;
 }
+
+.navbar-brand img {
+    margin-top: auto;
+    margin-left: none;
+    max-width: 49px;
+    max-height: 170px;
+    width: auto;
+    height: auto;
+}
 .carousel-inner img{
     width: 100%;
     height: 100%;
@@ -108,14 +117,6 @@ html, body {
     font-size: 4em;
     margin: 1rem;
 }
-/*.navbar-header img {
-    margin-top: auto;
-    margin-left: none;
-    max-width: 150px;
-    max-height: 100px;
-    width: auto;
-    height: auto;
-}*/
 
 /*body {
     background: #fff;
@@ -197,6 +198,15 @@ figure {
     width: 260px;
     height: 270px;
 }
+.colab{
+    margin: 1px 2px 1px 2px;
+    width: 100px;
+    height: 150px;
+}
+.colab img{
+    width: 100px;
+    height: 150px;
+}
 /*html {
     background: #e6e9e9;
     background-image: linear-gradient(270deg, rgb(230, 233, 233) 0%, rgb(216, 221, 221) 100%);
@@ -256,7 +266,7 @@ mark{
 blockquote{
     text-align: center;
     font-weight: bolder;
-    font-size: 40px;
+    font-size: 20px;
     font-style: italic;
 }
 p {
