--- a/css/main.css
+++ b/css/main.css
@@ -24,7 +24,7 @@ html, body {
     font-size: 1.1em !important;
 }
 .navbar-nav li ul{
-    position:absolute;
+    position:static;
     top:25px;
     left:0;
     display:none;
