--- a/css/main.css
+++ b/css/main.css
@@ -274,6 +274,15 @@ h6.blog{
     text-align: center;
     font-size: 18px;
 }
+h6.indice{
+    text-align: center;
+    font-size: 16px;
+    font-style: italic;
+}
+h6.indice2{
+    text-align: center;
+    font-size: 14px;
+}
 mark{
     background: yellow;
 }
