--- a/css/main.css
+++ b/css/main.css
@@ -111,6 +111,14 @@ html, body {
     margin-top: .3rem;
     margin-bottom: 1rem;
 }
+.fa-arrow-left{
+    color: #bb0000;
+    font-size: 2.0em;
+}
+.fa-arrow-right{
+    color: #bb0000;
+    font-size: 2.0em;
+}
 .fa-book{
     color: #e54d26;
 }
