--- a/css/main.css
+++ b/css/main.css
@@ -139,6 +139,10 @@ html, body {
     font-size: 4em;
     margin: 1rem;
 }
+.fa-arrow-alt-circle-up{
+    font-size: 1.5em;
+    color: #2163af;
+}
 
 iframe#form-edital{
     width: 900px;
