--- a/css/main.css
+++ b/css/main.css
@@ -409,6 +409,19 @@ b, strong {
 samp {
     display: none;
 }
+/*Para a tabela do calendário de aulas*/
+table{
+    width: 100%;
+    font: 17px;
+    font-family: 'Poppins', sans-serif;
+}
+table, th, td{
+    border: solid 1px #DDD;
+    border-collapse: collapse;
+    padding: 2px 3px;
+    text-align: center;
+}
+
 .footer, .footer p a {
     list-style: none;
     margin: 0;
