Atualização de versão de 05/11/2021: incluída a página Agradecimentos com o vídeo do Aluno Matheus Poganski.

--- a/css/main.css
+++ b/css/main.css
@@ -379,6 +379,9 @@ blockquote{
     font-size: 20px;
     font-style: italic;
 }
+.imgContainer{
+    float:left;
+}
 p {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     border-style: hidden;
