--- a/br/calendario.css
+++ b/br/calendario.css
@@ -114,10 +114,9 @@ h2 a {
   transition-timing-function: line;
 }
 
-@media (max-width: 800px) {
-
-  .container td:nth-child(4),
-  .container th:nth-child(4) {
-    display: none;
+@media (max-width: 400px) {
+  .container {
+    width: 100%;
   }
 }
+
